Fixes so that FeatureVectorManagerView can properly manage and switch between collections. Small fix in Hyperspace3DPane so that random presses of the F key don't trigger niche functionality